# PikNLP-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: test.yml
app/: config.yaml  inference.py  loadModel.py  main.py  schema.py
app/core/: config.py  dependencies.py  exceptions.py
app/routes/: common.py  generate.py  inference.py  train.py
app/schemas/: inference_schema.py
app/services/: inference_runner.py
tests/: conftest.py  test_main.py
tests/routes/: test_common.py  test_inference.py
tests/services/: test_inference_runner.py
tests/unit/: test_model.py
